--- a/src/css/showAllcomment.css
+++ b/src/css/showAllcomment.css
@@ -1,288 +1,291 @@
- .showAllcommentContainer{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.6);
-    position: fixed;
-    top:0;
-    left: 0;
-    z-index: 6;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
+.showAllcommentContainer {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.closeAllcomment{
-    position:absolute;
-    right: 5px;
-    top: 5px;
-    cursor: pointer;
+.closeAllcomment {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  cursor: pointer;
 }
-.showAllcommentContainer__box{
-    background-color: #FFF;
-    width: 70%;
-    height: 80%;
-    border-radius: 10px;
-    display: flex;
-    z-index: 6;
+.showAllcommentContainer__box {
+  background-color: #fff;
+  width: 70%;
+  height: 80%;
+  border-radius: 10px;
+  display: flex;
+  z-index: 6;
 }
-.showAllcommentContainer__img{
-    width: 60%;
-    border-right: 1px solid lightgray;
+.showAllcommentContainer__img {
+  width: 60%;
+  border-right: 1px solid lightgray;
 }
-.showAllcommentContainer__picture__main{
-    width: 100%;
-    height: 100%;
+.showAllcommentContainer__picture__main {
+  width: 100%;
+  height: 100%;
 }
-.showAllcommentContainer__main{
-    width: 100%;
-    height: 100%;
-    position: relative;
+.showAllcommentContainer__main {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
-.showAllcommentContainer__box__Image{
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    border-radius: 10px 0px 0px 10px;
-    border-right: 1px solid lightgray;
+.showAllcommentContainer__box__Image {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border-radius: 10px 0px 0px 10px;
+  border-right: 1px solid lightgray;
 }
-.showAllcommentContainer__dot{
-    position: relative;
-    width: 10px;
-    height: 10px;
-    background-color: rgba(255,255,255,0.6);
-    border-radius: 50%;
-    left: 50%;
-    bottom: 20px;
-    display: flex;
+.showAllcommentContainer__dot {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 50%;
+  left: 50%;
+  bottom: 20px;
+  display: flex;
 }
-.dot{
-    box-shadow: 1px 1px rgba(0,0,0,0.7);
+.dot {
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.7);
 }
-.showAllcommentContainer__picture__Leftbtn{
-    color: rgba(0,0,0,0.7);
-    position: absolute;
-    z-index: 6;
-    cursor: pointer;
-    top:50%;
+.showAllcommentContainer__picture__Leftbtn {
+  color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  z-index: 6;
+  cursor: pointer;
+  top: 50%;
 }
-.showAllcommentContainer__picture__Rightbtn{
-    color: rgba(0,0,0,0.7);
-    position: absolute;
-    z-index: 6;
-    cursor: pointer;
-    top: 50%;
-    right: 43%;
+.showAllcommentContainer__picture__Rightbtn {
+  color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  z-index: 6;
+  cursor: pointer;
+  top: 50%;
+  right: 43%;
 }
-.showAllcommentContainer__information{
-    width: 40%;
-    display: flex;
-    flex-direction: column;
+.showAllcommentContainer__information {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
 }
 /*person info*/
-.showAllcommentContainer__name__personImagebox{
-    display: flex;
-    align-items: center;
-    margin: 10px 5px;
-
+.showAllcommentContainer__name__personImagebox {
+  display: flex;
+  align-items: center;
+  margin: 10px 5px;
 }
-.showAllcommentContainer__name__personImage{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: 1px solid lightgray;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.showAllcommentContainer__name__personImage {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid lightgray;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.showAllcommentContainer__name__username{
-    margin: 0px 10px;
-    font-weight: 700;
+.showAllcommentContainer__name__username {
+  margin: 0px 10px;
+  font-weight: 700;
 }
-.showAllcommentContainer__deletePost{
-    background-color: black;
-    position: relative;
+.showAllcommentContainer__deletePost {
+  background-color: black;
+  position: relative;
 }
 /*caption*/
-.showAllcommentContainer__content{
-    width: 100%;
-    margin: 5px;
-    /* display: flex;
-    align-items: center; */
+.showAllcommentContainer__content {
+  width: 100%;
+  margin: 5px;
+  display: flex;
+  /* align-items: center; */
 }
-.showAllcommentContainer__content__authBox{
-    float: left;
-    display: flex;
-    align-items: center;
-    margin-right: 5px;
+.showAllcommentContainer__content__authBox {
+  float: left;
+  margin-right: 5px;
 }
-.showAllcommentContainer__authImg{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: 1px solid lightgray;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-right: 5px;
+.showAllcommentContainer__authImg {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid lightgray;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-right: 5px;
 }
-.showAllcommentContainer__auth{
-    font-weight: 700;
-    margin-right: 5px;
+
+.showAllcommentContainer__auth {
+  font-weight: 700;
+  margin-right: 5px;
+  display: inline-block;
 }
-.showAllcommentContainer__text{
-    word-break:break-word;
-    line-height: 35px;
-    width: 98%;
-    padding-right: 10px;
-    margin-right: 5px;
-    overflow: hidden;
+.showAllcommentContainer__text {
+  word-break: break-word;
+  width: 98%;
+  padding-right: 10px;
+  margin-right: 5px;
+  overflow: hidden;
 }
 /*comment*/
 
-.showAllcommentContainer__content__main{
-    width: 100%;
-    height: 90%;
-    border-top: 1px solid lightgray;
-    overflow: auto;
-    overflow-x: hidden;
+.showAllcommentContainer__content__main {
+  width: 100%;
+  height: 90%;
+  border-top: 1px solid lightgray;
+  overflow: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
-.showAllcommentContainer__msg__userBox{
-    float: left;
-    display: flex;
-    align-items: center;
-    margin-right: 5px;
+.showAllcommentContainer__msg__userBox {
+  float: left;
+  display: flex;
+  /* align-items: center; */
+  margin-right: 5px;
 }
-.showAllcommentContainer__msg__userImg{
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: 1px solid lightgray;
-    margin-right: 5px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.showAllcommentContainer__msg__userImg {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid lightgray;
+  margin-right: 5px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.showAllcommentContainer__msg{
-    margin: 10px 0px;
+.showAllcommentContainer__msg {
+  margin: 10px 0px;
 }
-.showAllcommentContainer__msg__box{
-    margin: 5px;
-    display: flex;
-    flex-direction: column;
+.showAllcommentContainer__msg__box {
+  margin: 5px;
+  display: flex;
+  flex-direction: column;
 }
-
-.showAllcommentContainer__msg__msg{
-    line-height: 35px;
+.showAllcommentContainer__authBox {
+  width: 80%;
 }
-.showAllcommentContainer__msg__name{
-    font-weight: 700;
+.showAllcommentContainer__msg__msg {
+  width: 80%;
+  word-break: break-word;
+}
+.showAllcommentContainer__msg__name {
+  font-weight: 700;
+  display: inline;
+  margin-right: 5px;
 }
 /*icon*/
-.showAllcommentContainer__icon{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-top: 1px solid lightgray;
-
+.showAllcommentContainer__icon {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid lightgray;
 }
-.showAllcommentContainer__icon__left{
-    display: flex;
+.showAllcommentContainer__icon__left {
+  display: flex;
 }
-.showAllcommentContainer__icon__like{
-    cursor: pointer;
+.showAllcommentContainer__icon__like {
+  cursor: pointer;
 }
-.showAllcommentContainer__icon__mark{
-    cursor: pointer;
+.showAllcommentContainer__icon__mark {
+  cursor: pointer;
 }
 /*讚*/
-.showAllcommentContainer__like{
-    display: flex;
-    align-items: center;
+.showAllcommentContainer__like {
+  display: flex;
+  align-items: center;
 }
-.showAllcommentContainer__like_name{
-    font-weight: 700;
-    margin: 5px;
+.showAllcommentContainer__like_name {
+  font-weight: 700;
+  margin: 5px;
 }
 /*input*/
-.showAllcommentContainer__msg__input{
-    font-size: 16px;
+.showAllcommentContainer__msg__input {
+  font-size: 16px;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-radius: 0px 0px 10px 0px;
+}
+.showAllcommentContainer__input {
+  height: 5%;
+  padding: 5px;
+  border-top: 1px solid lightgray;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 1200px) {
+  .showAllcommentContainer__box {
+    width: 80%;
+    height: 80%;
+  }
+}
+
+@media (max-width: 768px) {
+  .showAllcommentContainer__box {
     width: 100%;
-    outline: none;
-    border: none;
-    border-radius: 0px 0px 10px 0px;
+    border-radius: 0px;
+  }
 }
-.showAllcommentContainer__input{
-    height: 5%;
-    padding: 5px;
-    border-top: 1px solid lightgray;
-    overflow: hidden;
+
+@media (max-width: 480px) {
+  .closeIcon {
+    width: 30px;
+    height: 30px;
+    margin: 5px;
+  }
+  .showAllcommentContainer__box {
+    width: 100%;
+    height: 90%;
+    border-radius: 0px;
+    flex-direction: column;
+  }
+  .showAllcommentContainer__main {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
     display: flex;
-    align-items: center;
-}
-
-@media (max-width:1200px) {
-    .showAllcommentContainer__box{
-        width: 80%;
-        height: 80%;
-    }
-
-}
-
-@media (max-width:768px) {
-    .showAllcommentContainer__box{
-        width: 100%;
-        border-radius: 0px;
-    }
-}
-
-
-@media (max-width:480px) {
-    .closeIcon{
-        width: 30px;
-        height: 30px;
-        margin: 5px;
-    }
-    .showAllcommentContainer__box{
-        width: 100%;
-        height: 90%;
-        border-radius: 0px;
-        flex-direction: column;
-    }
-    .showAllcommentContainer__main{
-        width:100%;
-        height: 100%;
-        margin: 0px;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        border-bottom: 1px solid lightgray;
-    }
-    .showAllcommentContainer__box__Image{
-        width: 100%;
-        height: 100%;
-    }
-    .showAllcommentContainer__img{
-        width: 100%;
-        height:50%;
-    }
-    .showAllcommentContainer__information{
-        width: 100%;
-        height: 50%;
-    }
-    .showAllcommentContainer__input{
-        width: 100%;
-        height: 20%;
-        border-top: 1px solid lightgray;
-    }
-    .showAllcommentContainer__picture__Rightbtn{
-        right: 0px;
-        top: 250px;
-    }
-    .showAllcommentContainer__picture__Leftbtn{
-        top: 250px;
-    }
-
+    flex-direction: column;
+    position: relative;
+    border-bottom: 1px solid lightgray;
+  }
+  .showAllcommentContainer__box__Image {
+    width: 100%;
+    height: 100%;
+  }
+  .showAllcommentContainer__name {
+    display: none;
+  }
+  .showAllcommentContainer__img {
+    width: 100%;
+    height: 50%;
+  }
+  .showAllcommentContainer__information {
+    width: 100%;
+    height: 50%;
+  }
+  .showAllcommentContainer__input {
+    width: 100%;
+    height: 20%;
+    border-top: 1px solid lightgray;
+  }
+  .showAllcommentContainer__picture__Rightbtn {
+    right: 0px;
+    top: 250px;
+  }
+  .showAllcommentContainer__picture__Leftbtn {
+    top: 250px;
+  }
 }
