--- a/src/css/sideBar.css
+++ b/src/css/sideBar.css
@@ -1,197 +1,196 @@
-
-
-.otherLogo__item{
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    padding: 20px;
-    border-radius: 5px;
-    margin: 5px;
+.otherLogo__item {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 5px;
 }
-.otherLogo__item:hover{
-    background-color: lightgray;
+.otherLogo__item:hover {
+  background-color: lightgray;
 }
-.otherLogo__item__title{
-    margin: 0px 15px;
+.otherLogo__item__title {
+  margin: 0px 15px;
 }
-.leftSideBar{
-    width: 15%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    position: fixed;
-    left: 0;
-    z-index: 5;
-    border-right: 1px solid lightgray;
+.leftSideBar {
+  width: 15%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  position: fixed;
+  left: 0;
+  z-index: 5;
+  border-right: 1px solid lightgray;
 }
 /* toplogo */
-.mainLogo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+.mainLogo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
-.sideBarLogo{
-    width: 60%;
-    margin:0px 10px;
-    align-items: center;
+.sideBarLogo {
+  width: 60%;
+  margin: 0px 10px;
+  align-items: center;
 }
-.sideBarLogo__ins{
-    display: none;
+.sideBarLogo__ins {
+  display: none;
 }
 /* middle logo */
-.otherLogo{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 90%;
-    position: relative;
+.otherLogo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 90%;
+  position: relative;
 }
-.otherLogo__item__personImg{
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    border: 2px solid black;
-    background-size: cover;
-    background-position: center;
+.otherLogo__item__personImg {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 2px solid black;
+  background-size: cover;
+  background-position: center;
 }
 
 /* lower logo */
-.hamburger{
-    display: flex;
-    flex-direction: column;
+.hamburger {
+  display: flex;
+  flex-direction: column;
 }
 /*padsideBae*/
-.padSideBar{
-    display: none;
+.padSideBar {
+  display: none;
 }
-.padSideBar__hamburger{
-    display: none;
-}
-
-@media(max-width:1200px){
-    .leftSideBar{
-        width: 8%;
-    }
-    .otherLogo__item__title{
-        display: none;
-    }
-    .sideBarLogo{
-        display: none;
-    }
-    .sideBarLogo__ins{
-        display:block;
-        width: 100%;
-    }
+.padSideBar__hamburger {
+  display: none;
 }
 
-.signout{
-    position:absolute;
+@media (max-width: 1200px) {
+  .leftSideBar {
+    width: 8%;
+  }
+  .otherLogo__item__title {
+    display: none;
+  }
+  .sideBarLogo {
+    display: none;
+  }
+  .sideBarLogo__ins {
+    display: block;
+    width: 100%;
+  }
+  .otherLogo__item {
+    margin: 40px 20px;
+    padding: 0px;
+  }
+}
+
+.signout {
+  position: absolute;
+  border: 1px solid lightgray;
+  padding: 5px 10px;
+  bottom: 10%;
+  left: 10%;
+  width: 75%;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 1px 1px 8px #888888;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .leftSideBar {
+    display: none;
+    /* width: 100%; */
+    justify-content: space-between;
+  }
+  .padSideBar {
+    display: block;
+  }
+  .mainLogo {
+    position: fixed;
+    z-index: 5;
+    display: block;
+    width: 100%;
+    background-color: #fff;
+    border-bottom: 1px solid lightgray;
+  }
+  .sideBarLogo {
+    display: block;
+    width: 150px;
+  }
+  .sideBarLogo__ins {
+    display: none;
+  }
+  .otherLogo__group {
+    position: fixed;
+    z-index: 5;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #fff;
+    border-top: 1px solid lightgray;
+  }
+  .otherLogo__item {
+    margin: 10px;
+    padding: 0px;
+    border-radius: 50%;
+  }
+  .otherLogo {
+    width: 393px;
+    position: absolute;
+    bottom: 0;
+    height: auto;
+    flex-direction: row;
+    align-items: flex-end;
+    border-top: 1px solid lightgray;
+    background-color: #fff;
+  }
+  .hamburger {
+    display: none;
+  }
+  .mainLogo {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .padSideBar__hamburger {
+    display: block;
+    padding: 5px;
+    /* padding-right: 5px; */
+  }
+  .padotherLogo__signout {
+    position: absolute;
     border: 1px solid lightgray;
     padding: 5px 10px;
     bottom: 10%;
-    left:10%;
-    width: 75%;
+    right: 0;
+    height: 20px;
+    top: 50px;
+    width: 50px;
     border-radius: 5px;
-    background-color: #FFF;
+    background-color: #fff;
     box-shadow: 1px 1px 8px #888888;
     text-align: center;
+  }
+  .padotherLogo__item {
+    padding: 5px;
+  }
 }
-
-@media (max-width:768px) {
-    .leftSideBar{
-        display: none;
-        /* width: 100%; */
-        justify-content: space-between;
-    }
-    .padSideBar{
-        display: block;
-
-    }
-    .mainLogo{
-        position: fixed;
-        z-index: 5;
-        display: block;
-        width: 100%;
-        background-color: #FFF;
-        border-bottom: 1px solid lightgray;
-    }
-    .sideBarLogo{
-        display: block;
-        width: 150px;
-    }
-    .sideBarLogo__ins{
-        display: none;
-    }
-    .otherLogo__group{
-        position: fixed;
-        z-index: 5;
-        bottom: 0;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        background-color: #FFF;
-        border-top: 1px solid lightgray;
-    }
-    .otherLogo__item{
-        margin: 10px;
-        padding: 0px;
-        border-radius: 50%;
-    }
-    .otherLogo{
-        width: 393px;
-        position: absolute;
-        bottom: 0;
-        height: auto;
-        flex-direction: row;
-        align-items: flex-end;
-        border-top: 1px solid lightgray;
-        background-color: #FFF;
-    }
-    .hamburger{
-        display: none;
-    }
-    .mainLogo{
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .padSideBar__hamburger{
-        display: block;
-        padding: 5px;
-        /* padding-right: 5px; */
-        
-    }
-    .padotherLogo__signout{
-        position:absolute;
-        border: 1px solid lightgray;
-        padding: 5px 10px;
-        bottom: 10%;
-        right:0;
-        height: 20px;
-        top:50px;
-        width: 50px;
-        border-radius: 5px;
-        background-color: #FFF;
-        box-shadow: 1px 1px 8px #888888;
-        text-align: center;
-    }
-    .padotherLogo__item{
-        padding: 5px;
-    }
-}
-@media (max-width:480px) {
-    .mainLogo{
-        padding: 0px;
-    }
-    .otherLogo__item{
-        padding: 0px;
-    }
-    .sideBarLogo{
-        display: block;
-        width: 100px;
-        padding: 5px;
-    }
-
+@media (max-width: 480px) {
+  .mainLogo {
+    padding: 0px;
+  }
+  .otherLogo__item {
+    padding: 0px;
+  }
+  .sideBarLogo {
+    display: block;
+    width: 100px;
+    padding: 5px;
+  }
 }
